--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>    
 <header class="navegador">
-    <nav class="estiloNav">
+    <nav id="navbar" class="estiloNav">
         <ul>
             <li class="liEstilo"><a class="enlaceLogo" href="./index.html"><img src="./Images/LogoUnoDefinitivo.png" class="logoPrincipal"></a></li>
         </ul>
@@ -201,11 +201,13 @@
 </a>
 <footer class="piecito">
             <p>Andres Toledo (0223) 531-3045</p>          
-           <a href="https://www.facebook.com/andres.toledo.186/"><img src="./Images/LogoFacebook.png" alt="logo facebook"></a>
+           <a href="https://www.facebook.com/andres.toledo.186" target="_blank"><img src="./Images/LogoFacebook.png" alt="logo facebook"></a>
            <a href="https://www.instagram.com/toleandres"><img src="./Images/LogoInstagram.png" alt="logo instagram"></a>
            <a href="https://wa.me/542235313045"><img src="./Images/LogoWhatsapp.png" alt="logo whats"></a>
         </div>
 </footer>
+<script src="script.js"></script>
 
 </body>
+
 </html>
