--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>    
 <header class="navegador">
-    <nav id="navbar" class="estiloNav">
+    <nav class="estiloNav">
         <ul>
             <li class="liEstilo"><a class="enlaceLogo" href="./index.html"><img src="./Images/LogoUnoDefinitivo.png" class="logoPrincipal"></a></li>
         </ul>
@@ -123,8 +123,7 @@
         </div>
     </section>
 </div>
-
-
+    
         <Section id="Fotografo" class="fotografo">
             <div class="card" style="max-width: 1000px;">
                 <div class="row g-0">
@@ -200,11 +199,18 @@
 <img class="wpp" src="./Images/LogoWhatsapp.png" alt="boton wsp">
 </a>
 <footer class="piecito">
-            <p>Andres Toledo (0223) 531-3045</p>          
-           <a href="https://www.facebook.com/andres.toledo.186" target="_blank"><img src="./Images/LogoFacebook.png" alt="logo facebook"></a>
-           <a href="https://www.instagram.com/toleandres"><img src="./Images/LogoInstagram.png" alt="logo instagram"></a>
-           <a href="https://wa.me/542235313045"><img src="./Images/LogoWhatsapp.png" alt="logo whats"></a>
-        </div>
+            <p>Andres Toledo (0223) 531-3045</p>
+            <div class="iconoFacebook">
+                <a href="https://www.facebook.com/andres.toledo.186" target="_blank"><img class="imagenIcono" src="./Images/facebook.svg" alt="logo facebook"></a>
+            </div>
+            <div class="iconoInstagram">
+                <a href="https://www.instagram.com/toleandres"><img class="imagenIconoInsta" src="./Images/instagram.svg" alt="logo instagram"></a>
+            </div>
+            <div class="iconoWhatsapp">
+                <a href="https://wa.me/542235313045"><img class="imagenIconoWtp" src="./Images/whatsapp.svg" alt="logo Whatsapp"></a>
+            </div>
+
+           
 </footer>
 <script src="script.js"></script>
 
