medias queries nuevas

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="principales">       
         <section>
             <div class="card" style="width: 20rem;margin-right: 10px;">
-                <a href="./Pages/Rocio.html"><img src="./Images/PORTFOLIO/ROCIO/RocioDieciocho.jpg" class="card-img-top" alt="">
+                <a href="./Pages/Rocio.html"><img src="./Images/PORTFOLIO/ROCIO/RocioDieciocho.jpg" class="card-img-top img-fluid rounded-start" alt="">
             </div>
             <div class="card-body">
                 <h4>
@@ -41,7 +41,7 @@
         </section>
         <section class="RetratoInfantil">
             <div class="card" style="width: 20rem;margin-right: 10px;">
-                <a href="./Pages/Infantil.html"><img src="./Images/PORTFOLIO/RETRATO INFANTIL/InfantilCuatro.jpg" class="card-img-top" alt="...">
+                <a href="./Pages/Infantil.html"><img src="./Images/PORTFOLIO/RETRATO INFANTIL/InfantilCuatro.jpg" class="card-img-top img-fluid rounded-start" alt="...">
             </div>
             <div class="card-body">
                 <h4>
@@ -53,7 +53,7 @@
         
          <section>
             <div class="card" style="width: 20rem;margin-right: 10px;">
-                <a href="./Pages/Deporte.html"><img src="./Images/PORTFOLIO/RETRATO DEPORTIVO/CaroUno.jpg" class="card-img-top" alt="...">
+                <a href="./Pages/Deporte.html"><img src="./Images/PORTFOLIO/RETRATO DEPORTIVO/CaroUno.jpg" class="card-img-top img-fluid rounded-start" alt="...">
             </div>
             <div class="card-body">
                 <h4>
@@ -65,7 +65,7 @@
         
         <section>
             <div class="card" style="width: 20rem;margin-right: 10px;">
-                <a href="./Pages/Pelu.html"><img src="./Images/PORTFOLIO/PELU/PeluUno.jpg" class="card-img-top" alt="...">
+                <a href="./Pages/Pelu.html"><img src="./Images/PORTFOLIO/PELU/PeluUno.jpg" class="card-img-top img-fluid rounded-start" alt="...">
             </div>
             <div class="card-body">
                 <h4>
@@ -78,7 +78,7 @@
     <div class="PrincipalesDos">
         <section>
             <div class="card" style="width: 20rem;margin-right: 10px;">
-                <a href="./Pages/Modelaje.html"><img src="./Images/PORTFOLIO/MODELAJE/ModelajeNueve.JPG" class="card-img-top" alt="...">
+                <a href="./Pages/Modelaje.html"><img src="./Images/PORTFOLIO/MODELAJE/ModelajeNueve.JPG" class="card-img-top img-fluid rounded-start" alt="...">
             </div>
             <div class="card-body">
                 <h4>
@@ -90,7 +90,7 @@
         </section>
         <section>
             <div class="card" style="width: 20rem;margin-right: 10px;">
-                <a href="./Pages/Caro.html"><img src="./Images/PORTFOLIO/CARO/SosbaUno.jpg" class="card-img-top" alt="...">
+                <a href="./Pages/Caro.html"><img src="./Images/PORTFOLIO/CARO/SosbaUno.jpg" class="card-img-top img-fluid rounded-start" alt="...">
             </div>
             <div class="card-body">
                 <h4>
@@ -102,7 +102,7 @@
         </section>
         <section>
             <div class="card" style="width: 20rem;margin-right: 10px;">
-                <a href="./Pages/Urbano.html"><img src="./Images/PORTFOLIO/URBANO/GiuUno.jpg" class="card-img-top" alt="...">
+                <a href="./Pages/Urbano.html"><img src="./Images/PORTFOLIO/URBANO/GiuUno.jpg" class="card-img-top img-fluid rounded-start" alt="...">
             </div>
             <div class="card-body">
                 <h4>
@@ -203,7 +203,7 @@
 <footer class="piecito">
             <p>Andres Toledo (0223) 531-3045</p>
             <div class="iconoFacebook">
-                <a href="https://www.facebook.com/andres.toledo.186" target="_blank"><img class="imagenIcono" src="./Images/facebook.svg" alt="logo facebook"></a>
+                <a href="https://www.facebook.com/andres.toledo.186/" target="_blank"><img class="imagenIcono" src="./Images/facebook.svg" alt="logo facebook"></a>
             </div>
             <div class="iconoInstagram">
                 <a href="https://www.instagram.com/toleandres"><img class="imagenIconoInsta" src="./Images/instagram.svg" alt="logo instagram"></a>
