cambio de iconos de salida de fotos

--- a/Pages/Caro.html
+++ b/Pages/Caro.html
@@ -26,37 +26,37 @@
         <div class="modalCarito" id="img1">
             <div class="imagenCarito">
                 <img src="../Images/PORTFOLIO/CARO/SosbaCinco.jpg">
-                <a href="./Caro.html">Cerrar</a>
+                <a href="./Caro.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalCarito" id="img2">
             <div class="imagenCarito">
                 <img src="../Images/PORTFOLIO/CARO/SosbaCuatro.jpg">
-                <a href="./Caro.html">Cerrar</a>
+                <a href="./Caro.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalCarito" id="img3">
             <div class="imagenCarito">
                 <img src="../Images/PORTFOLIO/CARO/SosbaNueve.jpg">
-                <a href="./Caro.html">Cerrar</a>
+                <a href="./Caro.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalCarito" id="img4">
             <div class="imagenCarito">
                 <img src="../Images/PORTFOLIO/CARO/SosbaSeis.jpg">
-                <a href="./Caro.html">Cerrar</a>
+                <a href="./Caro.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalCarito" id="img5">
             <div class="imagenCarito">
                 <img src="../Images/PORTFOLIO/CARO/SosbaOcho.jpg">
-                <a href="./Caro.html">Cerrar</a>
+                <a href="./Caro.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalCarito" id="img6">
             <div class="imagenCarito">
                 <img src="../Images/PORTFOLIO/CARO/SosbaSiete.jpg">
-                <a href="./Caro.html">Cerrar</a>
+                <a href="./Caro.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
     </section>
