--- a/Pages/Efectos.html
+++ b/Pages/Efectos.html
@@ -26,37 +26,37 @@
         <div class="modalChiquis" id="img1">
             <div class="imagenEfectos">
                 <img src="../Images/PORTFOLIO/EFECTOS/EfectoCinco.jpg">
-                <a href="./Efectos.html">Cerrar</a>
+                <a href="./Efectos.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalChiquis" id="img2">
             <div class="imagenEfectos">
                 <img src="../Images/PORTFOLIO/EFECTOS/EfectoCuatro.jpg">
-                <a href="./Efectos.html">Cerrar</a>
+                <a href="./Efectos.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalChiquis" id="img3">
             <div class="imagenEfectos">
                 <img src="../Images/PORTFOLIO/EFECTOS/EfectoDos.jpg">
-                <a href="./Efectos.html">Cerrar</a>
+                <a href="./Efectos.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalChiquis" id="img4">
             <div class="imagenEfectos">
                 <img src="../Images/PORTFOLIO/EFECTOS/EfectoSeis.jpg">
-                <a href="./Efectos.html">Cerrar</a>
+                <a href="./Efectos.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalChiquis" id="img5">
             <div class="imagenEfectos">
                 <img src="../Images/PORTFOLIO/EFECTOS/EfectoSiete.jpg">
-                <a href="./Efectos.html">Cerrar</a>
+                <a href="./Efectos.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalChiquis" id="img6">
             <div class="imagenEfectos">
                 <img src="../Images/PORTFOLIO/EFECTOS/EfectoTres.jpg">
-                <a href="./Efectos.html">Cerrar</a>
+                <a href="./Efectos.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
     
