--- a/Pages/Infantil.html
+++ b/Pages/Infantil.html
@@ -26,37 +26,37 @@
         <div class="modalChiquis" id="img1">
             <div class="imagenChiquis">
                 <img src="../Images/PORTFOLIO/RETRATO INFANTIL/Infantil Siete.jpg">
-                <a href="./Infantil.html">Cerrar</a>
+                <a href="./Infantil.html"class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalChiquis" id="img2">
             <div class="imagenChiquis">
                 <img src="../Images/PORTFOLIO/RETRATO INFANTIL/InfantilCinco.jpg">
-                <a href="./Infantil.html">Cerrar</a>
+                <a href="./Infantil.html"class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalChiquis" id="img3">
             <div class="imagenChiquis">
                 <img src="../Images/PORTFOLIO/RETRATO INFANTIL/InfantilUno.jpg">
-                <a href="./Infantil.html">Cerrar</a>
+                <a href="./Infantil.html"class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalChiquis" id="img4">
             <div class="imagenChiquis">
                 <img src="../Images/PORTFOLIO/RETRATO INFANTIL/InfantilDos.jpg">
-                <a href="./Infantil.html">Cerrar</a>
+                <a href="./Infantil.html"class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalChiquis" id="img5">
             <div class="imagenChiquis">
                 <img src="../Images/PORTFOLIO/RETRATO INFANTIL/InfantilSeis.JPG">
-                <a href="./Infantil.html">Cerrar</a>
+                <a href="./Infantil.html"class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalChiquis" id="img6">
             <div class="imagenChiquis">
                 <img src="../Images/PORTFOLIO/RETRATO INFANTIL/InfantilTres.jpg">
-                <a href="./Infantil.html">Cerrar</a>
+                <a href="./Infantil.html"class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
     
