--- a/Pages/Modelaje.html
+++ b/Pages/Modelaje.html
@@ -28,55 +28,55 @@
         <div class="modalModel" id="img1">
             <div class="imagenModel">
                 <img src="../Images/PORTFOLIO/MODELAJE/ModelajeCinco.JPG">
-                <a href="./Modelaje.html">Cerrar</a>
+                <a href="./Modelaje.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalModel" id="img2">
             <div class="imagenModel">
                 <img src="../Images/PORTFOLIO/MODELAJE/ModelajeCuatro.JPG">
-                <a href="./Modelaje.html">Cerrar</a>
+                <a href="./Modelaje.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalModel" id="img3">
             <div class="imagenModel">
                 <img src="../Images/PORTFOLIO/MODELAJE/ModelajeDos.JPG">
-                <a href="./Modelaje.html">Cerrar</a>
+                <a href="./Modelaje.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalModel" id="img4">
             <div class="imagenModel">
                 <img src="../Images/PORTFOLIO/MODELAJE/ModelajeNueve.JPG">
-                <a href="./Modelaje.html">Cerrar</a>
+                <a href="./Modelaje.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalModel" id="img5">
             <div class="imagenModel">
                 <img src="../Images/PORTFOLIO/MODELAJE/ModelajeOcho.JPG">
-                <a href="./Modelaje.html">Cerrar</a>
+                <a href="./Modelaje.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalModel" id="img6">
             <div class="imagenModel">
                 <img src="../Images/PORTFOLIO/MODELAJE/ModelajeSeis.JPG">
-                <a href="./Modelaje.html">Cerrar</a>
+                <a href="./Modelaje.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalModel" id="img7">
             <div class="imagenModel">
                 <img src="../Images/PORTFOLIO/MODELAJE/ModelajeSiete.JPG">
-                <a href="./Modelaje.html">Cerrar</a>
+                <a href="./Modelaje.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalModel" id="img8">
             <div class="imagenModel">
                 <img src="../Images/PORTFOLIO/MODELAJE/ModelajeTres.JPG">
-                <a href="./Modelaje.html">Cerrar</a>
+                <a href="./Modelaje.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalModel" id="img9">
             <div class="imagenModel">
                 <img src="../Images/PORTFOLIO/MODELAJE/ModelajeUno.JPG">
-                <a href="./Modelaje.html">Cerrar</a>
+                <a href="./Modelaje.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>   
     </section>
