--- a/Pages/Rocio.html
+++ b/Pages/Rocio.html
@@ -28,55 +28,55 @@
         <div class="modalRochi" id="img1">
             <div class="imagenRocio">
                 <img src="../Images/PORTFOLIO/ROCIO/RocioDiecinueve.jpg">
-                <a href="./Rocio.html">Cerrar</a>
+                <a href="./Rocio.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalRochi" id="img2">
             <div class="imagenRocio">
                 <img src="../Images/PORTFOLIO/ROCIO/RocioCuatro.jpg">
-                <a href="./Rocio.html">Cerrar</a>
+                <a href="./Rocio.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalRochi" id="img3">
             <div class="imagenRocio">
                 <img src="../Images/PORTFOLIO/ROCIO/RocioDieciocho.jpg">
-                <a href="./Rocio.html">Cerrar</a>
+                <a href="./Rocio.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalRochi" id="img4">
             <div class="imagenRocio">
                 <img src="../Images/PORTFOLIO/ROCIO/RocioDos.jpg">
-                <a href="./Rocio.html">Cerrar</a>
+                <a href="./Rocio.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalRochi" id="img5">
             <div class="imagenRocio">
                 <img src="../Images/PORTFOLIO/ROCIO/RocioNueve.jpg">
-                <a href="./Rocio.html">Cerrar</a>
+                <a href="./Rocio.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalRochi" id="img6">
             <div class="imagenRocio">
                 <img src="../Images/PORTFOLIO/ROCIO/RocioVeintiseis.jpg">
-                <a href="./Rocio.html">Cerrar</a>
+                <a href="./Rocio.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalRochi" id="img7">
             <div class="imagenRocio">
                 <img src="../Images/PORTFOLIO/ROCIO/RocioVeintiuno.jpg">
-                <a href="./Rocio.html">Cerrar</a>
+                <a href="./Rocio.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalRochi" id="img8">
             <div class="imagenRocio">
                 <img src="../Images/PORTFOLIO/ROCIO/RocioVeintiocho.jpg">
-                <a href="./Rocio.html">Cerrar</a>
+                <a href="./Rocio.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalRochi" id="img9">
             <div class="imagenRocio">
                 <img src="../Images/PORTFOLIO/ROCIO/RocioDiecisiete.jpg">
-                <a href="./Rocio.html">Cerrar</a>
+                <a href="./Rocio.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
             
