--- a/Pages/Urbano.html
+++ b/Pages/Urbano.html
@@ -28,55 +28,55 @@
         <div class="modalUrbano" id="img1">
             <div class="imagenUrbano">
                 <img src="../Images/PORTFOLIO/URBANO/GiuCinco.jpg">
-                <a href="./Urbano.html">Cerrar</a>
+                <a href="./Urbano.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalUrbano" id="img2">
             <div class="imagenUrbano">
                 <img src="../Images/PORTFOLIO/URBANO/GiuCuatro.jpg">
-                <a href="./Urbano.html">Cerrar</a>
+                <a href="./Urbano.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalUrbano" id="img3">
             <div class="imagenUrbano">
                 <img src="../Images/PORTFOLIO/URBANO/GiuDiez.jpg">
-                <a href="./Urbano.html">Cerrar</a>
+                <a href="./Urbano.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalUrbano" id="img4">
             <div class="imagenUrbano">
                 <img src="../Images/PORTFOLIO/URBANO/GiuDos.jpg">
-                <a href="./Urbano.html">Cerrar</a>
+                <a href="./Urbano.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalUrbano" id="img5">
             <div class="imagenUrbano">
                 <img src="../Images/PORTFOLIO/URBANO/GiuNueve.jpg">
-                <a href="./Urbano.html">Cerrar</a>
+                <a href="./Urbano.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalUrbano" id="img6">
             <div class="imagenUrbano">
                 <img src="../Images/PORTFOLIO/URBANO/GiuOcho.jpg">
-                <a href="./Urbano.html">Cerrar</a>
+                <a href="./Urbano.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalUrbano" id="img7">
             <div class="imagenUrbano">
                 <img src="../Images/PORTFOLIO/URBANO/GiuSeis.jpg">
-                <a href="./Urbano.html">Cerrar</a>
+                <a href="./Urbano.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalUrbano" id="img8">
             <div class="imagenUrbano">
                 <img src="../Images/PORTFOLIO/URBANO/GiuSiete.jpg">
-                <a href="./Urbano.html">Cerrar</a>
+                <a href="./Urbano.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
         <div class="modalUrbano" id="img9">
             <div class="imagenUrbano">
                 <img src="../Images/PORTFOLIO/URBANO/GiuTres.jpg">
-                <a href="./Urbano.html">Cerrar</a>
+                <a href="./Urbano.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
             </div>
         </div>
             
