cambios en las clases css

--- a/Pages/Deporte.html
+++ b/Pages/Deporte.html
@@ -26,37 +26,37 @@
         <div class="modalDeport" id="img1">
             <div class="imagenDeporte">
                 <img src="../Images/PORTFOLIO/RETRATO DEPORTIVO/CaroTres.jpg">
-                <a href="./Deporte.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
+                <a href="./Deporte.html" class="botonRegreso"><img src="../Images/x-square.svg"></a>
             </div>
         </div>
             <div class="modalDeport" id="img2">
                 <div class="imagenDeporte">
                     <img src="../Images/PORTFOLIO/RETRATO DEPORTIVO/CaroCuatro.jpg">
-                    <a href="./Deporte.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
+                    <a href="./Deporte.html" class="botonRegreso"><img src="../Images/x-square.svg"></a>
                 </div>
             </div>
             <div class="modalDeport" id="img3">
                 <div class="imagenDeporte">
                     <img src="../Images/PORTFOLIO/RETRATO DEPORTIVO/CaroDiez.jpg">
-                    <a href="./Deporte.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
+                    <a href="./Deporte.html" class="botonRegreso"><img src="../Images/x-square.svg"></a>
                 </div>
             </div>
             <div class="modalDeport" id="img4">
                 <div class="imagenDeporte">
                     <img src="../Images/PORTFOLIO/RETRATO DEPORTIVO/CaroDos.jpg">
-                    <a href="./Deporte.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
+                    <a href="./Deporte.html" class="botonRegreso"><img src="../Images/x-square.svg"></a>
                 </div>
             </div>
             <div class="modalDeport" id="img5">
                 <div class="imagenDeporte">
                     <img src="../Images/PORTFOLIO/RETRATO DEPORTIVO/CaroUno.jpg">
-                    <a href="./Deporte.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
+                    <a href="./Deporte.html" class="botonRegreso"><img src="../Images/x-square.svg"></a>
                 </div>
             </div>
             <div class="modalDeport" id="img6">
                 <div class="imagenDeporte">
                     <img src="../Images/PORTFOLIO/RETRATO DEPORTIVO/CaroSeis.jpg">
-                    <a href="./Deporte.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
+                    <a href="./Deporte.html" class="botonRegreso"><img src="../Images/x-square.svg"></a>
                 </div>
             </div>
     
