--- a/Pages/Pelu.html
+++ b/Pages/Pelu.html
@@ -26,37 +26,37 @@
         <div class="modalPeluquita" id="img1">
             <div class="imagenPeluquita">
                 <img src="../Images/PORTFOLIO/PELU/PeluCinco.jpg">
-                <a href="./Pelu.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
+                <a href="./Pelu.html" class="botonRegreso"><img src="../Images/x-square.svg"></a>
             </div>
         </div>
         <div class="modalPeluquita" id="img2">
             <div class="imagenPeluquita">
                 <img src="../Images/PORTFOLIO/PELU/PeluCuatro.jpg">
-                <a href="./Pelu.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
+                <a href="./Pelu.html" class="botonRegreso"><img src="../Images/x-square.svg"></a>
             </div>
         </div>
         <div class="modalPeluquita" id="img3">
             <div class="imagenPeluquita">
                 <img src="../Images/PORTFOLIO/PELU/PeluNueve.jpg">
-                <a href="./Pelu.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
+                <a href="./Pelu.html" class="botonRegreso"><img src="../Images/x-square.svg"></a>
             </div>
         </div>
         <div class="modalPeluquita" id="img4">
             <div class="imagenPeluquita">
                 <img src="../Images/PORTFOLIO/PELU/PeluOcho.jpg">
-                <a href="./Pelu.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
+                <a href="./Pelu.html" class="botonRegreso"><img src="../Images/x-square.svg"></a>
             </div>
         </div>
         <div class="modalPeluquita" id="img5">
             <div class="imagenPeluquita">
                 <img src="../Images/PORTFOLIO/PELU/PeluSiete.jpg">
-                <a href="./Pelu.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
+                <a href="./Pelu.html" class="botonRegreso"><img src="../Images/x-square.svg"></a>
             </div>
         </div>
         <div class="modalPeluquita" id="img6">
             <div class="imagenPeluquita">
                 <img src="../Images/PORTFOLIO/PELU/PeluTres.jpg">
-                <a href="./Pelu.html" class="botonRegreso"><img src="../Images/x-square-fill.svg"></a>
+                <a href="./Pelu.html" class="botonRegreso"><img src="../Images/x-square.svg"></a>
             </div>
         </div>
     </section>
