--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <li class="liEstilo"><a class="enlaceLogo" href="./index.html"><img src="./Images/LogoUnoDefinitivo.png" class="logoPrincipal"></a></li>
         </ul>
         <ul class="estiloUl"> 
-            <li><a href="#Fotografo">Fotografo</a></li>
-            <li><a href="#Cursos y Capacitaciones">Cursos</a></li>
-            <li><a href="#Contacto">Contacto</a></li>
+            <li><a href="index.html#Fotografo">Fotografo</a></li>
+            <li><a href="index.html#Cursos y Capacitaciones">Cursos</a></li>
+            <li><a href="index.html#Contacto">Contacto</a></li>
         </ul>
     </nav>    
 </header>
@@ -137,6 +137,7 @@
                     <h5 class="card-title">Andres Toledo</h5>
                     <p class="card-text">Oriundo de la provincia de Santa fé, Andres siempre tuvo una manera creativa de ver el mundo, comenzó su capacitacion en 2017 de la mano de Cristian Heit y su escuela "Visualmente", a traves de los viajes fotográficos fue adquiriendo experiencia en el área de Retratos. Luego, siguió con su capacitación en el mundo de la moda, curso que dictaba Gonzalo tachini, gran exponente del estilo, en su curso "Retrato y moda" aprendiendo mas sobre iluminación y manejo de modelos. Finalmente a traves de internet conoció el mundo de la fotografia budoir.</p>
                     <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    <a href="index.html">🔝</a>
                 </div>
                 </div>
                 </div>
@@ -151,6 +152,7 @@
                     <p class="card-text">El correcto uso de nuestra camara es fundamental a la hora de decidir que tipo de fotografia vamos a elegir, por eso este curso consta de 3 niveles en los cuales aprenderas como programar tu camara para sacar el maximo provecho de la misma.
                     </p>
                     <a href="https://wa.me/542235313045"><button class="boton">Saber mas</button></a>
+                    <a href="index.html">🔝</a>
                   </div>
                 </div>
                 <div class="card">
@@ -190,6 +192,7 @@
           
                     <button type="submit">Enviar</button>
                     <button type="reset">Reset</button>
+                    <a href="index.html">🔝</a>
                 </form>
             </div>
         </section>  
